@@ -366,22 +366,29 @@ class XmdocUtility{
 			curl_setopt($curlHandle, CURLOPT_HEADER, TRUE);
 			curl_setopt($curlHandle, CURLOPT_NOBODY, TRUE);
 			curl_setopt($curlHandle, CURLOPT_SSL_VERIFYPEER, false);
+            curl_setopt($curlHandle, CURLOPT_CONNECTTIMEOUT, 3); // Timeout de connexion
+            curl_setopt($curlHandle, CURLOPT_TIMEOUT, 6); // Timeout total
 			$curlReturn = curl_exec($curlHandle);
 			if (false === $curlReturn) {
-				trigger_error(curl_error($curlHandle));
-				$size = 0;
-			} else {
-				$size = curl_getinfo($curlHandle, CURLINFO_CONTENT_LENGTH_DOWNLOAD);
+				trigger_error(curl_error($curlHandle), E_USER_WARNING);
+                curl_close($curlHandle);
+				return 0;
 			}
+            $httpCode = curl_getinfo($curlHandle, CURLINFO_HTTP_CODE);
+            if ($httpCode >= 400) { // Si le fichier n'existe pas ou erreur serveur
+                curl_close($curlHandle);
+                return 0;
+            }
+            $size = curl_getinfo($curlHandle, CURLINFO_CONTENT_LENGTH_DOWNLOAD);
 			curl_close($curlHandle);
+            return ($size > 0) ? XmdocUtility::FileSizeConvert($size) : 0;
 			if ($size <= 0){
 				return 0;
 			} else {
 				return XmdocUtility::FileSizeConvert($size);
 			}
-		} else {
-			return 0;
 		}
+		return 0;
     }
     public static function getServerStats()
     {
